--- a/wordpress/css/style2.css
+++ b/wordpress/css/style2.css
@@ -29,14 +29,17 @@
 }
 #primary > section.carousel > div > article > a > img{
 	border-radius: 50%;
-	width: 60%;
-	height: 25%;	
+	/* width: 60%;
+	height: 25%; */	
 	margin-left: 65px !important;
 	margin-top: 15px;
+	max-width: 100%;
 }
 #member_article > div > article > a > img{
 	border-radius: 50%;
-	height: auto;
+	height: 200px;
+	width: 200px;
+	max-width:100%;
 }
 article.member_article{
 	width: 20%;
@@ -59,15 +62,16 @@ article.member_article{
 }
 #primary > section.carousel > div > article > a > img{
 	border-radius: 50%;
-	width: 60%;
-	height: 25%;
+	/* width: 60%;
+	height: 25%; */
 	margin-left: 30px;
 	margin-top: 15px;
 }
 #member_article > div > article > a > img{
 	border-radius: 50%;
-	height: 30%;
-	width: 50%;
+	height: 200px;
+	width: 200px;
+	max-width:100%;
 	margin-left: 25%;
 }
 article.member_article{
@@ -78,9 +82,10 @@ article.member_article{
 @media only screen and (max-width: 840px) {
 #member_article > div > article > a > img{
 	border-radius: 50%;
-	height: 30%;
-	width: 50%;
+	/* height: 30%;
+	width: 50%; */
 	margin-left: 25%;
+	margin: 0 auto;
 }
 }
 #thumb{
