--- a/wordpress/css/style2.css
+++ b/wordpress/css/style2.css
@@ -115,3 +115,15 @@ article.member_article{
 	height: 25%;
 	width: 50%;
 }
+@media only screen and (max-width: 321px) {
+.fb_iframe_widget {
+	width: 100%;
+	margin: 0 auto
+}
+}
+@media only screen and (max-width: 345px) {
+.fb_iframe_widget {
+	width: 100%;
+	margin: 0 auto
+}
+}
