--- a/wordpress/css/style2.css
+++ b/wordpress/css/style2.css
@@ -53,7 +53,7 @@
 	max-width:100%;
 }
 article.member_article{
-	width: 20%;
+	width: 249px;
 	height: auto;
 }
 .image.featured{
@@ -96,14 +96,31 @@ article.member_article{
 	margin-bottom: 65px !important;
 }
 }
-@media only screen and (max-width: 840px) {
+@media only screen and (max-width: 1280px) {
 #member_article > div > article > a > img{
 	border-radius: 50%;
-	/* height: 30%;
-	width: 50%; */
+	height: 200px;
+	width: 200px;
 	margin-left: 25%;
 	margin: 0 auto;
 }
+}
+@media only screen and (max-width: 840px) {
+#member_article > div > article > a > img{
+ border-radius: 50%;
+ /* height: 30%;
+ width: 50%; */
+ margin-left: 25%;
+ margin: 0 auto;
+}
+.row:not(.no-collapse)>*{
+ width:auto !important;
+}
+}
+@media only screen and (max-width: 470px) {
+ .row:not(.no-collapse)>*{
+  width:100% !important;
+ }
 }
 #thumb{
 	padding-bottom: 225px;
